[gd_scene load_steps=12 format=3 uid="uid://dfdj5l4hj5t18"]

[ext_resource type="Script" uid="uid://cpxq3kjxgwtsg" path="res://scenes/main/main_window.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/sidebar/sidebar.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/messages/message_view.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://d12a4fhl6lojk" path="res://assets/theme/icons/menu.svg" id="4"]
[ext_resource type="PackedScene" uid="uid://bav2ls0nqas7u" path="res://scenes/members/member_list.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://b3kye1tkgnr60" path="res://assets/theme/icons/members.svg" id="6"]
[ext_resource type="Texture2D" uid="uid://d2mq4xicf5qe6" path="res://assets/theme/icons/search.svg" id="7"]
[ext_resource type="PackedScene" path="res://scenes/search/search_panel.tscn" id="8"]
[ext_resource type="Texture2D" uid="uid://ddb2dohjdov56" path="res://assets/theme/icons/sidebar_toggle.svg" id="9"]
[ext_resource type="PackedScene" path="res://scenes/video/video_grid.tscn" id="10"]
[ext_resource type="PackedScene" path="res://scenes/messages/thread_panel.tscn" id="11"]

[node name="MainWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="LayoutHBox" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Sidebar" parent="LayoutHBox" instance=ExtResource("2")]
layout_mode = 2

[node name="ContentArea" type="VBoxContainer" parent="LayoutHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="ContentHeader" type="HBoxContainer" parent="LayoutHBox/ContentArea"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HamburgerButton" type="Button" parent="LayoutHBox/ContentArea/ContentHeader"]
visible = false
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
tooltip_text = "Open sidebar"
icon = ExtResource("4")
flat = true

[node name="SidebarToggle" type="Button" parent="LayoutHBox/ContentArea/ContentHeader"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
tooltip_text = "Toggle channel list"
icon = ExtResource("9")
flat = true

[node name="TabBar" type="TabBar" parent="LayoutHBox/ContentArea/ContentHeader"]
layout_mode = 2
size_flags_horizontal = 3
tab_close_display_policy = 1
drag_to_rearrange_enabled = true

[node name="HeaderSpacer" type="Control" parent="LayoutHBox/ContentArea/ContentHeader"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchToggle" type="Button" parent="LayoutHBox/ContentArea/ContentHeader"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
tooltip_text = "Search messages"
icon = ExtResource("7")
flat = true

[node name="MemberListToggle" type="Button" parent="LayoutHBox/ContentArea/ContentHeader"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
tooltip_text = "Toggle member list"
icon = ExtResource("6")
flat = true

[node name="TopicBar" type="Label" parent="LayoutHBox/ContentArea"]
visible = false
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
vertical_alignment = 1

[node name="VideoGrid" parent="LayoutHBox/ContentArea" instance=ExtResource("10")]

[node name="ContentBody" type="HBoxContainer" parent="LayoutHBox/ContentArea"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="MessageView" parent="LayoutHBox/ContentArea/ContentBody" instance=ExtResource("3")]
layout_mode = 2

[node name="ThreadPanel" parent="LayoutHBox/ContentArea/ContentBody" instance=ExtResource("11")]
layout_mode = 2

[node name="MemberList" parent="LayoutHBox/ContentArea/ContentBody" instance=ExtResource("5")]
layout_mode = 2

[node name="SearchPanel" parent="LayoutHBox/ContentArea/ContentBody" instance=ExtResource("8")]
visible = false

[node name="DrawerBackdrop" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="DrawerContainer" type="Control" parent="."]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
